--- a/index.html
+++ b/index.html
@@ -57,10 +57,6 @@
       h1 {
         font-size: inherit;
       }
-
-      .card-text {
-        padding-left: 20px;
-      }
     </style>
     <!--[if !mso]><!-->
     <style type="text/css">
@@ -145,6 +141,10 @@
         .card-text {
           padding-left: 25px !important;
           padding-right: 25px !important;
+        }
+
+        .hero-mobile-padding {
+          padding-left: 25px !important;
         }
 
         .card-link {
@@ -424,15 +424,15 @@
                                         </td>
                                       </tr>
                                       <tr>
-                                        <td align="left" style="font-size:0px;padding:0;word-break:break-word;">
+                                        <td align="center" style="font-size:0px;padding:0;word-break:break-word;">
                                           <div
-                                            style="font-family:DM Sans, Arial;font-size:16px;font-weight:700;line-height:24px;text-align:left;color:#252323;">
-                                            <div class="card-text">Side Project Marketing Is the New King</div>
+                                            style="font-family:DM Sans, Arial;font-size:16px;font-weight:700;line-height:24px;text-align:center;color:#252323;">
+                                            <div class="card-text">Side Project Marketing Is the New&nbsp;King</div>
                                           </div>
                                         </td>
                                       </tr>
                                       <tr>
-                                        <td class="card-link" align="left" vertical-align="middle"
+                                        <td class="card-link" align="center" vertical-align="middle"
                                           style="font-size:0px;padding:0;word-break:break-word;">
                                           <table border="0" cellpadding="0" cellspacing="0" role="presentation"
                                             style="border-collapse:separate;line-height:100%;">
@@ -482,16 +482,17 @@
                                         </td>
                                       </tr>
                                       <tr>
-                                        <td align="left" style="font-size:0px;padding:0;word-break:break-word;">
+                                        <td align="center" style="font-size:0px;padding:0;word-break:break-word;">
                                           <div
-                                            style="font-family:DM Sans, Arial;font-size:16px;font-weight:700;line-height:24px;text-align:left;color:#252323;">
-                                            <div class="card-text">How Influencer Marketing Needs to be Decentralized
+                                            style="font-family:DM Sans, Arial;font-size:16px;font-weight:700;line-height:24px;text-align:center;color:#252323;">
+                                            <div class="card-text">How Influencer Marketing
+                                              Needs to&nbsp;be Decentralized
                                             </div>
                                           </div>
                                         </td>
                                       </tr>
                                       <tr>
-                                        <td align="left" vertical-align="middle"
+                                        <td align="center" vertical-align="middle"
                                           style="font-size:0px;padding:0;word-break:break-word;">
                                           <table border="0" cellpadding="0" cellspacing="0" role="presentation"
                                             style="border-collapse:separate;line-height:100%;">
@@ -556,14 +557,14 @@
                                       <tr>
                                         <td align="left" style="font-size:0px;padding:0;word-break:break-word;">
                                           <div
-                                            style="font-family:DM Sans, Arial;font-size:16px;font-weight:700;line-height:24px;text-align:left;color:#252323;">
+                                            style="font-family:DM Sans, Arial;font-size:16px;font-weight:700;line-height:24px;text-align:center;color:#252323;">
                                             <div class="card-text">4 Websites That Pay Writers Around $200+ an Article
                                             </div>
                                           </div>
                                         </td>
                                       </tr>
                                       <tr>
-                                        <td align="left" vertical-align="middle"
+                                        <td align="center" vertical-align="middle"
                                           style="font-size:0px;padding:0;word-break:break-word;">
                                           <table border="0" cellpadding="0" cellspacing="0" role="presentation"
                                             style="border-collapse:separate;line-height:100%;">
@@ -613,16 +614,16 @@
                                         </td>
                                       </tr>
                                       <tr>
-                                        <td align="left" style="font-size:0px;padding:0;word-break:break-word;">
+                                        <td align="center" style="font-size:0px;padding:0;word-break:break-word;">
                                           <div
-                                            style="font-family:DM Sans, Arial;font-size:16px;font-weight:700;line-height:24px;text-align:left;color:#252323;">
+                                            style="font-family:DM Sans, Arial;font-size:16px;font-weight:700;line-height:24px;text-align:center;color:#252323;">
                                             <div class="card-text">Avoid These 7 Pitfalls When Starting Your Side Hustle
                                             </div>
                                           </div>
                                         </td>
                                       </tr>
                                       <tr>
-                                        <td align="left" vertical-align="middle"
+                                        <td align="center" vertical-align="middle"
                                           style="font-size:0px;padding:0;word-break:break-word;">
                                           <table border="0" cellpadding="0" cellspacing="0" role="presentation"
                                             style="border-collapse:separate;line-height:100%;">
